--- a/login.html
+++ b/login.html
@@ -47,6 +47,8 @@
           required
         />
         <input type="submit" />
+        <br><br>
+        <label>Not a user! register <a href="/register">here</a></label>
       </form>
     </div>
   </body>
