--- a/register.html
+++ b/register.html
@@ -38,10 +38,11 @@
   <body>
     <div class="login-form">
       <h1>Registration Form</h1>
-      <form action="auth" method="POST">
+      <form action="register" method="POST">
         <input type="text" name="username" placeholder="Username" required />
         <input type="text" name="firstname" placeholder="First Name" required />
         <input type="text" name="lastname" placeholder="Last Name" required />
+        <input type="text" name="email" placeholder="Email" required />
         <input
           type="password"
           name="password"
